Various syntax changes to allow compilation under JDK 9