@@ -1,22 +1,26 @@
 package gin;
 
+import java.io.File;
+import java.io.IOException;
+import java.io.Serializable;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
+
+import org.pmw.tinylog.Logger;
+
 import com.github.javaparser.ast.CompilationUnit;
 import com.github.javaparser.ast.Node;
 import com.github.javaparser.ast.body.MethodDeclaration;
+
 import gin.edit.Edit;
 import gin.edit.line.LineEdit;
 import gin.misc.FullyQualifiedNames;
-import org.pmw.tinylog.Logger;
-
-import java.io.File;
-import java.io.IOException;
-import java.io.Serial;
-import java.io.Serializable;
-import java.nio.file.Files;
-import java.nio.file.LinkOption;
-import java.nio.file.Path;
-import java.util.*;
-import java.util.stream.Collectors;
 
 /**
  * In practice SourceFile can be viewed as immutable. The only way it can be changed
@@ -25,12 +29,11 @@ import java.util.stream.Collectors;
  */
 public abstract class SourceFile implements Serializable {
 
-    @Serial
     private static final long serialVersionUID = 4223075648256895407L;
 
     protected final String filename;
 
-    protected String workingDir = Path.of("").toAbsolutePath().toString();
+    protected String workingDir = Paths.get("").toAbsolutePath().toString();
 
     /**
      * high-level representation of the target methods
@@ -166,8 +169,8 @@ public abstract class SourceFile implements Serializable {
         Path filePath;
         try {
             // Call to toRealPath to resolve symbolic links
-            workingDirPath = Path.of(workingDir).normalize().toRealPath().toAbsolutePath();
-            filePath = Path.of(filename).normalize().toRealPath().toAbsolutePath();
+            workingDirPath = Paths.get(workingDir).normalize().toRealPath().toAbsolutePath();
+            filePath = Paths.get(filename).normalize().toRealPath().toAbsolutePath();
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
