@@ -19,7 +19,7 @@ public class SourceFileTest {
 
     @Test
     public void testGetRelativePathFromAbsolutePath() {
-        String relativePath = Path.of("examples", "unittests", "Error.java").toString();
+        String relativePath = Paths.get("examples", "unittests", "Error.java").toString();
         Path sourceFilePath = Paths.get(relativePath).toAbsolutePath();
         SourceFileStub sourceFile = new SourceFileStub(sourceFilePath.toString(), Collections.singletonList("returnTen(int)"));
         assertEquals(relativePath, sourceFile.getRelativePathToWorkingDir());
@@ -27,15 +27,15 @@ public class SourceFileTest {
 
     @Test
     public void testGetRelativePathFromRelativePath() {
-        String relativePath = Path.of("examples", "unittests", "Error.java").toString();
+        String relativePath = Paths.get("examples", "unittests", "Error.java").toString();
         SourceFileStub sourceFile = new SourceFileStub(relativePath, Collections.singletonList("returnTen(int)"));
         assertEquals(relativePath, sourceFile.getRelativePathToWorkingDir());
     }
 
     @Test
     public void testGetRelativePathFromUnnormalizedPath() {
-        String relativePath = Path.of("examples", "unittests", "Error.java").toString();
-        Path sourceFilePath = Path.of(".", ".", relativePath).toAbsolutePath();
+        String relativePath = Paths.get("examples", "unittests", "Error.java").toString();
+        Path sourceFilePath = Paths.get(".", ".", relativePath).toAbsolutePath();
         SourceFileStub sourceFile = new SourceFileStub(sourceFilePath.toString(), Collections.singletonList("returnTen(int)"));
         assertEquals(relativePath, sourceFile.getRelativePathToWorkingDir());
     }
@@ -44,12 +44,12 @@ public class SourceFileTest {
     @Test
     public void testGetRelativePathFromSymbolicLink() throws IOException {
         Assume.assumeFalse(SystemUtils.IS_OS_WINDOWS);
-        String relativePath = Path.of("examples", "unittests", "Error.java").toString();
+        String relativePath = Paths.get("examples", "unittests", "Error.java").toString();
         SourceFileStub sourceFile = new SourceFileStub(relativePath, Collections.singletonList("returnTen(int)"));
 
-        Path link =  Path.of("examples", "symboliclinktounittests");
+        Path link =  Paths.get("examples", "symboliclinktounittests");
         FileUtils.forceDeleteOnExit(link.toFile());
-        Files.createSymbolicLink(link, Path.of("examples", "unittests").toAbsolutePath());
+        Files.createSymbolicLink(link, Paths.get("examples", "unittests").toAbsolutePath());
         sourceFile.workingDir = link.toString();
 
         assertEquals("Error.java", sourceFile.getRelativePathToWorkingDir());
